--- a/css/styles.css
+++ b/css/styles.css
@@ -23,28 +23,29 @@ Header and footer colors:
   background color: lightgray
   text color: black
 */
-:root{
+:root {
   --bg1-color: #dae0eb;
   --bg2-color: #357b70;
   --bg3-color: #656362;
   --bg4-color: gray;
-  --bg5-color: #BCBCBC;
+  --bg5-color: #bcbcbc;
   --bg6-color: #575554;
   --bg7-color: lightgray;
   --txt1-color: #2b2b2b;
   --txt2-color: black;
   --txt3-color: white;
-  --lnk1-color: #57390B;
+  --lnk1-color: #57390b;
   --lnk2-color: #014506;
   --lnk3-color: blue;
-  --lnk4-color: #4B0016;
+  --lnk4-color: #4b0016;
   --bd1-color: black;
   --bd2-color: gray;
   --row1-color: #f2f2f2;
   --obj1-color: #edc655;
   --obj2-color: #fcffad;
   --obj3-color: #f76414;
-  /*Font*/
+
+  /* Font */
   --font-size1: 16px;
   --font-size2: 18px;
   --font-size3: 22px;
@@ -58,27 +59,34 @@ Header and footer colors:
   --font-weight2: 700;
 }
 
-
 * {
   box-sizing: border-box;
 }
+
 body {
   font-family: var(--font-family1);
   font-weight: var(--font-weight1);
   font-size: var(--font-size1);
+
   /* Sets the font size to 16px */
   line-height: 1.6;
+
   /* Sets the line-height to 1.6 */
   background-color: var(--bg1-color);
   color: var(--txt1-color);
 }
-input, texture, select, button {
+
+input,
+select,
+button {
   font-family: var(--font-family1);
 }
-h1{
+
+h1 {
   font-size: var(--font-size6);
   font-weight: var(--font-weight2);
 }
+
 h2 {
   font-size: var(--font-size4);
   font-weight: var(--font-weight2);
@@ -88,14 +96,17 @@ h3 {
   font-size: var(--font-size2);
   font-weight: var(--font-weight2);
 }
+
 a {
   color: var(--lnk1-color);
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
 }
+
 a:visited {
   /* visited link */
   color: var(--lnk3-color);
@@ -105,9 +116,11 @@ a:active {
   /* selected link */
   color: var(--lnk4-color);
 }
+
 #my-link {/* id selector */
   color: var(--lnk2-color);
 }
+
 .page-header {
   display: flex;
   width: 100%;
@@ -116,25 +129,31 @@ a:active {
   background-color: var(--bg7-color);
   align-items: center;
 }
+
 .page-header__item {
   flex: 0 1 50px;
   align-content: flex-end;
   width: 50px;
 }
+
 .page-header__item:last-child {
   flex-grow: 1;
   text-align: right;
 }
+
 .navigation-list {
   list-style-type: none;
 }
+
 .navigation-list li {
   display: inline-block;
   margin-left: 15px;
 }
+
 .navigation-list__item--active {
   text-decoration: none;
 }
+
 .profile {
   width: 80%;
   margin: 0 auto;
@@ -142,6 +161,7 @@ a:active {
   text-align: justify;
   align-content: center;
 }
+
 .profile__portrait {
   float: left;
   width: 20%;
@@ -149,49 +169,65 @@ a:active {
   margin-bottom: 100px;
   border-radius: 50%;
 }
+
 .about {
   max-width: 100%;
   text-align: justify;
   margin-bottom: 100px;
 }
-.about-picture{
+
+.about-picture {
   float: right;
   width: 50%;
   margin-left: 40px;
 }
-table, th, td {
+
+table,
+th,
+td {
   border: 1px solid var(--bd1-color);
 }
+
 table {
   border-collapse: collapse;
 }
-thead{
+
+thead {
   background-color: var(--bg3-color);
   color: var(--txt3-color);
 }
-tr:nth-child(even) {background-color: var(--row1-color);}
-.work, .contact, .about{
+
+tr:nth-child(even) { background-color: var(--row1-color); }
+
+.work,
+.contact,
+.about {
   margin-right: 2%;
   margin-left: 2%;
 }
-.button, button {
+
+.button,
+button {
   /* overwrites browser defaults */
+
   /* resets the border */
   border: none;
   display: inline-block;
+
   /* takes the font from the outer container */
   font-family: inherit;
+
   /* style button */
   background-color: var(--bg2-color);
   color: var(--txt3-color);
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
+
   /* width of the border, type, color */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition: 0.2s opacity;
 }
-
 
 button:hover,
 button:focus,
@@ -199,36 +235,45 @@ button:focus,
 .button:focus {
   /* lets the mouse appear as a hand when hovering over the button */
   cursor: pointer;
+
   /* reduces the opacity of the button to 80% */
   opacity: 0.8;
 }
+
 /* start grid fallback */
 .grid__item {
   display: inline-block;
   width: 33%;
 }
+
 @keyframes color-change {
   0% {
     fill: var(--obj1-color);
   }
+
   50% {
     fill: var(--obj2-color);
   }
+
   100% {
     fill: var(--obj3-color);
   }
 }
+
 .rCloud {
   animation: 4s color-change infinite alternate linear;
 }
+
 @keyframes cloud-move {
   from {
-    transform: translate(0, 0px);
+    transform: translate(0, 0);
   }
+
   to {
-    transform: translate(200px, 0px);
+    transform: translate(200px, 0);
   }
 }
+
 .lCloud {
   animation-duration: 30s;
   animation-name: cloud-move;
@@ -242,45 +287,53 @@ button:focus,
 @supports (display: grid) {
   .grid {
     display: grid;
+
     /* grid-template-columns: 300px 300px 300px; fractions are better than pixels - they are responsive */
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     margin: 0;
-
   }
+
   .grid__item {
     background-color: var(--bg7-color);
     width: auto;
     min-height: auto;
     margin: 0;
   }
+
   .grid__item:last-child {
     grid-column: 3 / 3;
     grid-row: 1 / 3;
   }
+
   @media all and (max-width: 500px) {
     .grid {
       grid-template-columns: 1fr;
     }
   }
-  @media all and (min-width: 500px) and (max-width: 750px){
+
+  @media all and (min-width: 500px) and (max-width: 750px) {
     .grid {
       grid-template-columns: 1fr 1fr;
     }
   }
+
   @media all and (max-width: 750px) {
     .grid {
       grid-gap: 10px;
     }
+
     .grid__item:last-child {
       grid-column: auto / auto;
       grid-row: auto / auto;
     }
+
     h1 {
       font-size: var(--font-size3);
     }
   }
 }
+
 @supports (display: block) {
   @media all and (max-width: 800px) {
     .profile__portrait {
@@ -289,40 +342,50 @@ button:focus,
       margin: 40px auto;
       align-items: center;
     }
-    .profile{
+
+    .profile {
       text-align: center;
       width: 90%;
     }
+
     h1 {
       font-size: var(--font-size3);
     }
   }
+
   @media all and (min-width: 1024px) {
-    .profile{
+    .profile {
       text-align: justify;
       max-width: 1024px;
       font-size: var(--font-size5);
     }
-    .page-header{
+
+    .page-header {
       font-size: var(--font-size3);
     }
+
     .contact {
       text-align: center;
       font-size: var(--font-size5);
     }
-    input, textarea{
+
+    input,
+    textarea {
       max-width: 1024px;
     }
+
     h1 {
       font-size: var(--font-size7);
     }
   }
 }
 
-.contact{
+.contact {
   margin-bottom: 100px;
 }
-input[type=text], textarea{
+
+input[type=text],
+textarea {
   width: 100%;
   padding: 20px;
   border: 1px solid var(--bd2-color);
@@ -330,26 +393,32 @@ input[type=text], textarea{
   margin-bottom: 16px;
   resize: vertical;
 }
-input[type=email], input[type=tel]{
+
+input[type=email],
+input[type=tel] {
   width: 100%;
   padding: 20px;
   border: 1px solid var(--bd2-color);
   margin-top: 6px;
   margin-bottom: 16px;
 }
-textarea{
+
+textarea {
   height: 300px;
 }
+
 input[type=submit] {
   background-color: var(--bg4-color);
   color: var(--txt2-color);
-  padding: 20px 20px;
+  padding: 20px;
   border: none;
   cursor: pointer;
 }
+
 input[type=submit]:hover {
   background-color: var(--bg5-color);
 }
+
 .contact-form {
   background-color: var(--bg6-color);
   color: var(--txt3-color);
@@ -357,14 +426,17 @@ input[type=submit]:hover {
   max-width: 1024px;
   margin: 0 auto;
 }
-.standard-label-tel{
+
+.standard-label-tel {
   margin-right: 0;
 }
+
 .page-footer {
   clear: both;
   display: flex;
   flex-direction: column;
   align-items: center;
+
   /* create a fixed footer! */
   position: fixed;
   left: 0;
